
In general, the project has been moved to the latest dependency versions.
Java 17 is still the baseline, but Java 25 is supported.

[[x7.1-new-components]]
=== New Components

[[x7.1-cloudevents]]
==== CloudEvents Support

The new `spring-integration-cloudevents` module has been introduced to support CloudEvents specification.
See xref:cloudevents.adoc[] for more information.

[[x7.1-grpc]]
==== gRPC Support

The new `spring-integration-grpc` module has been introduced to support gRPC framework.
See xref:grpc.adoc[] for more information.

[[x7.1-general-changes]]
=== General Changes

The `MessageTransformingHandler.requiresReply` flag cannot be modified: an `UnsupportedOperationException` is thrown from the overridden `setRequiresReply()` method to indicate the transformer pattern cannot produce nulls for replies.
See xref:transformer.adoc[] for more information.

[[x7.1-web-services-changes]]
=== Web Services Support Changes

The Web Services Outbound Gateway now can rely on the provided `WebServiceTemplate.defaultUri`.
See xref:ws.adoc[] for more information.

[[x7.1-testing-changes]]
=== Testing Support Changes

The `TestUtils.getPropertyValue()` with a `Class<?>` argument has been deprecated in favor of the change on the overloaded method from an `Object` return type to the generic argument.
This gives a flexible casting of the extracted value to the expected type in tests logic.
See xref:testing.adoc[] for more information.

[[x7.1-redis-changes]]
=== Redis Support Changes

The `RedisMessageStore.doRemove` now uses `GETDEL` instead of `GET` + `UNLINK` for Redis 6.2+ by default.
Use `RedisMessageStore.setUseUnlink(true)` to use `GET` + `UNLINK` when atomicity is not required and `GETDEL` causes noticeable Redis latency.
See xref:redis.adoc[] for more information.

[[x7.1-jms-changes]]
=== JMS Support Changes

JMS-backed message channels now map headers to JMS message properties and back.
See xref:jms.adoc[] for more information.